// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.config.reporting;

option java_package = "org.wfanet.measurement.config.reporting";
option java_multiple_files = true;
option java_outer_classname = "ImpressionQualificationFilterConfigProto";

// The configuration that contains pre-defined impression qualification filters
message ImpressionQualificationFilterConfig {
  message ImpressionQualificationFilter {
    string external_impression_qualification_filter_id = 1;
    int64 internal_impression_qualification_filter_id = 2;
    repeated ImpressionQualificationFilterSpec filter_specs = 3;
  }

  message ImpressionQualificationFilterSpec {
    enum MediaType {
      MEDIA_TYPE_UNSPECIFIED = 0;
      VIDEO = 1;
      DISPLAY = 2;
      OTHER = 3;
    }
    MediaType media_type = 1;
    repeated EventFilter filters = 2;
  }

  message EventFilter {
    repeated EventTemplateField terms = 1;
  }

  message EventTemplateField {
    string path = 1;

    message FieldValue {
      oneof selector {
        string string_value = 1;
        string enum_value = 2;
        bool bool_value = 3;
        float float_value = 4;
      }
    }
    FieldValue value = 2;
  }

  repeated ImpressionQualificationFilter impression_qualification_filters = 1;
}